# graphene

./: Makefile  meson.build  meson_options.txt
.ci/lib/: stage-build-nosgx.jenkinsfile  stage-build-sgx.jenkinsfile
Documentation/devel/: coding-style.rst
LibOS/shim/include/: meson.build
LibOS/shim/src/: meson.build
Pal/regression/: meson.build
Pal/regression/crt_init/: meson.build
Pal/src/host/Linux/: meson.build
Pal/src/host/Linux-SGX/: db_misc.c  meson.build
Pal/src/host/Linux-SGX/protected-files/: meson.build
Pal/src/host/Linux-SGX/tools/common/: meson.build
Pal/src/host/Linux-SGX/tools/ias-request/: meson.build
Pal/src/host/Linux-SGX/tools/is-sgx-available/: meson.build
Pal/src/host/Linux-SGX/tools/pf_crypt/: meson.build
Pal/src/host/Linux-SGX/tools/pf_tamper/: meson.build
Pal/src/host/Linux-SGX/tools/quote-dump/: meson.build
Pal/src/host/Linux-SGX/tools/ra-tls/: meson.build
Pal/src/host/Linux-SGX/tools/verify-ias-report/: meson.build
Pal/src/host/Skeleton/: meson.build
common/include/: api.h
common/src/: meson.build
subprojects/: .gitignore  cJSON.wrap  mbedtls-2.26.0.wrap  mbedtls-mbedtls-2.26.0.wrap  tomlc99-5be06807ad5f2230cad99e15380c4f4076c9dd83.wrap  tomlc99.wrap  uthash-2.1.0.wrap
subprojects/packagecache/: README  uthash-2.1.0-wrap.tar
subprojects/packagefiles/: README  cJSON-1.7.12-wrap.tar  mbedtls-2.26.0-wrap.tar  reprotar.sh  tomlc99-5be06807ad5f2230cad99e15380c4f4076c9dd83-wrap.tar  uthash-2.1.0-wrap.tar
