subdir('crt_init')

sources = [
    '..Bootstrap',
    'AttestationReport',
    'avl_tree_test',
    'Bootstrap',
    'Bootstrap3',
    'Bootstrap7',
    'Directory',
    'Event',
    'Exit',
    'File',
    'File2',
    'HelloWorld',
    'Hex',
    'Memory',
    'Misc',
    'Pie',
    'Pipe',
    'Process',
    'Process2',
    'Process3',
    'Process4',
    'Select',
    'SendHandle',
    'Socket',
    'Symbols',
    'Tcp',
    'Thread2',
    'Udp',
    'normalize_path',
]

if host_machine.cpu_family() == 'x86_64'
    sources += [
        'Exception',
        'Exception2',
        'Segment',
        'Thread',
    ]
endif

foreach src : sources
endforeach
